# django-adv-cache-tag

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  README.md  pyproject.toml  runtests.sh  setup.cfg
.github/workflows/: test.yml
adv_cache_tag/: tag.py
adv_cache_tag/tests/: test_tag.py  tests.py
adv_cache_tag/tests/testproject/: settings.py
adv_cache_tag/tests/testproject/adv_cache_test_app/templatetags/: adv_cache_test.py  other_tags.py
